P2 complete: exception logging, GrpcFinancialDataClient (TTL, URL encoding, response validation, SLF4J), UserRepository pagination, Portfolio eager loading (@EntityGraph), HealthConfig (RestTemplate bean, null metrics, DB timeout), PythonReportGenerator (thread-safe lock, configurable path, specific exceptions), EmailValidator dead code removal, performance default 0.0